Add first Dummy Content

--- a/src/app/hub/hub.page.html
+++ b/src/app/hub/hub.page.html
@@ -20,6 +20,29 @@
     </ion-item>
   </ion-list>
 
+  <ion-card>
+    <img src="https://images.unsplash.com/photo-1494789540273-617a5015d44b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" />
+    <ion-card-header>
+      <ion-card-title>Schützenfest am Start</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      Keep close to Nature's heart... and break clear away, once in awhile,
+      and climb a mountain or spend a week in the woods. Wash your spirit clean.
+      <p class="publicationInfo"><ion-icon name="time"></ion-icon> Vor 2 Tagen veröffentlicht</p>
+    </ion-card-content>
+  </ion-card>
+
+  <ion-card>
+      <img src="https://images.unsplash.com/photo-1494789540273-617a5015d44b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80" />
+      <ion-card-header>
+        <ion-card-title>Vorbereitungen Laufen</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        Keep close to Nature's heart... and break clear away, once in awhile,
+        and climb a mountain or spend a week in the woods. Wash your spirit clean.
+      </ion-card-content>
+    </ion-card>
+
 
   <!--
     <div *ngIf="selectedItem" padding>
