--- a/src/app/mitglieder/mitglieder.page.html
+++ b/src/app/mitglieder/mitglieder.page.html
@@ -19,9 +19,22 @@
       </div>
     </ion-item>
   </ion-list>
-  <!--
-    <div *ngIf="selectedItem" padding>
-      You navigated here from <b>{{selectedItem.title }}</b>
-    </div>
-  -->
+
+  <ion-content>
+      <ion-grid>
+        <ion-row class="ion-justify-content-start">
+          <ion-col *ngFor="let member of members | async" col-12 size="12">
+            <ion-card button="true" routerDirection="forward" href="/member-details/{{member.name.first}}">
+              <ion-item>
+                <ion-avatar item-start>
+                  <img [src]="member.picture.medium">
+                </ion-avatar>
+                <h2 text-capitalize style="padding-left:5px"> {{ member.name?.first }} {{ member.name?.last }}</h2>
+              </ion-item>
+            </ion-card>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+     </ion-content>
 </ion-content>
